Fix static analysis warnings for UML2SD